<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="supplies_dashboard_title">Supplies</string>
    <string name="aosp_setting_title">System settings</string>
    <string name="animation_title">Animations</string>
    <string name="dev_options_title">Developer options</string>
    <string name="general_title">General</string>
    <string name="gestures_title">Gestures</string>
    <string name="lockscreen_title">Lock screen</string>
    <string name="misc_title">Miscellaneous</string>
    <string name="navigation_title">Navigation</string>
    <string name="notifications_title">Notifications</string>
    <string name="powermenu_title">Power menu</string>
    <string name="powermenu_items_title">Power menu items</string>
    <string name="quicksettings_title">Quick settings</string>
    <string name="spoof_title">Spoofing</string>
    <string name="status_bar_title">Status bar</string>
    <string name="swipe_gestures_title">Swipe gestures</string>
    <string name="system_settings_title">System options</string>
    <string name="themes_title">Themes</string>
    <string name="torch_gestures_title">Torch gestures</string>
    <string name="flashlight_category">Flashlight</string>
    <string name="telephony_icons_title">Telephony icons</string>
    <string name="aosp_gesture_summary">Stock gestures included with Android</string>
    <string name="dark_ui_mode_summary">Browse the dark theme options</string>
    <string name="theme_summary">Monet settings</string>
    <string name="unsupported_gestures">Enable two button or three button navigation to use this feature</string>
    <string name="ok">OK</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="attention">Attention</string>
    <string name="default_string">Default</string>
    <string name="none_string">None</string>
    <string name="hidden_string">Hidden</string>
    <string name="large_string">Large</string>
    <string name="medium_string">Medium</string>
    <string name="xlarge_string">Extra large</string>
    <string name="disabled">Disabled</string>
    <string name="enable_first">Please enable first</string>
    <string name="led_color_green">Green</string>
    <string name="led_color_red">Red</string>
    <string name="edit_hint">Value</string>
    <string name="seek_value_edit_label">Set value</string>
    <string name="android_12_string" translatable="false">Android 12</string>
    <string name="android_12_beta_string" translatable="false">Android 12 Beta</string>
    <string name="android_12_dp3_string" translatable="false">Android 12 DP3</string>
    <string name="aosp_string" translatable="false">AOSP</string>
    <string name="miui_string" translatable="false">MIUI</string>
    <string name="oos_string" translatable="false">OxygenOS</string>
    <string name="search">Search</string>
    <string name="search_apps">Search apps</string>
    <string name="unit_milliseconds">milliseconds</string>
    <string name="unit_percent" translatable="false">\u0025</string>
    <string name="unit_pixels" translatable="false">dp</string>
    <string name="unit_seconds">seconds</string>
    <string name="unit_x1000ms" translatable="false">x1000 ms</string>
    <string name="switch_bar_on">On</string>
    <string name="switch_bar_off">Off</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#ff000000</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>
    <string name="seekbar_no_default_value">No default value set</string>
    <string name="seekbar_default_value_set">Value set to default of <xliff:g id="number">%d</xliff:g></string>
    <string name="seekbar_default_value_already_set">Default value is already set</string>
    <string name="seekbar_default_string">Default</string>
    <string name="custom_seekbar_value">Value: <xliff:g id="v">%s</xliff:g></string>
    <string name="custom_seekbar_default_value">by default</string>
    <string name="custom_seekbar_default_value_to_set">Default value: <xliff:g id="v">%s</xliff:g>\nLong tap to set</string>
    <string name="custom_seekbar_default_value_is_set">Default value is set</string>
    <string name="usb_default_config_title">USB configuration</string>
    <string name="usb_default_config_summary">Choose the default behavior when connected to a device via USB</string>
    <string name="navigation_bar_category">Navigation bar</string>
    <string name="navigation_bar_title">On-screen navigation bar</string>
    <string name="navigation_bar_summary">Enable on-screen navigation keys</string>
    <string name="navigation_bar_layout_title">Layout</string>
    <string name="navigation_bar_layout_summary">Customize the layout of the navigation bar</string>
    <string name="navigation_bar_arrow_keys_title">Show arrow keys while typing</string>
    <string name="navigation_bar_arrow_keys_summary">Display left and right cursor buttons in navigation bar while typing</string>
    <string name="navigation_bar_help_text">These settings mainly relate to the 3-button navigation bar. If you use gesture navigation and want to customize it, e.g. hide the gesture handle, please visit: Settings > System > Gestures.</string>
    <string name="nav_bar_tuner_title">Navigation bar tuner</string>
    <string name="nav_bar_tuner_summary">Change nav bar layout</string>
    <string name="navbar_layout_title">Layout</string>
    <string name="navbar_layout_normal">Normal</string>
    <string name="navbar_layout_compact">Compact</string>
    <string name="navbar_layout_leftleaning">Left-leaning</string>
    <string name="navbar_layout_rightleaning">Right-leaning</string>
    <string name="system_navigation_summary">Choose which system navigation style to use</string>
    <string name="three_finger_gesture">Three finger gesture</string>
    <string name="three_finger_gesture_summary">Swipe three finger to screenshot</string>
    <string name="pixel_navbar_anim_title">Pixel animation</string>
    <string name="pixel_navbar_anim_summary">Toggle home button animation</string>
    <string name="light_settings_header">Light settings</string>
    <string name="battery_light_settings">Battery light</string>
    <string name="battery_light_summary">Enable or disable battery light while on DND, low battery</string>
    <string name="battery_light_enable">Battery light</string>
    <string name="battery_full_light_enabled">Battery light when fully charged</string>
    <string name="battery_light_allow_on_dnd_title">Battery light in Do Not Disturb mode</string>
    <string name="battery_light_low_blinking_title">Pulse if battery low</string>
    <string name="battery_light_cat">Battery light color when charging</string>
    <string name="battery_light_low_color">Battery low</string>
    <string name="battery_light_medium_color">Charging</string>
    <string name="battery_light_full_color">Almost fully charged</string>
    <string name="battery_light_reallyfull_color">Fully charged</string>
    <string name="lockscreen_battery_info_title">Lockscreen charging info</string>
    <string name="lockscreen_battery_info_summary">Show charging current, voltage, wattage and battery temperature on lockscreen while charging</string>
    <string name="udfps_category">UDFPS</string>
    <string name="udfps_customization">UDFPS customization</string>
    <string name="udfps_recog_animation">UDFPS animation</string>
    <string name="udfps_recog_animation_summary">Shows an animation while reading your finger</string>
    <string name="udfps_recog_animation_effect_title">UDFPS animation effect</string>
    <string name="udfps_recog_animation_effect_summary">Choose animation effect</string>
    <string name="udfps_settings_title">UDFPS settings</string>
    <string name="udfps_settings_summary">Settings for customizing the UDFPS</string>
    <string name="udfps_icon_picker_title">UDFPS icon picker</string>
    <string name="udfps_icon_picker_summary">Choose your favorite fingerprint icon</string>
    <string name="notification_light_settings">Notification light</string>
    <string name="heads_up_notifications">Heads up</string>
    <string name="heads_up_notifications_summary">Pop up status bar notifications</string>
    <string name="summary_heads_up_enabled">Pop-up notifications are enabled</string>
    <string name="summary_heads_up_disabled">Pop-up notifications are disabled</string>
    <string name="add_heads_up_package">Add app</string>
    <string name="add_heads_up_stoplist_summary">Disable heads up notifications in these applications</string>
    <string name="add_heads_up_blacklist_summary">Disable heads up from these applications</string>
    <string name="heads_up_stoplist_title">Stoplist</string>
    <string name="heads_up_blacklist_title">Blacklist</string>
    <string name="profile_choose_app">Choose app</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="dialog_delete_message">Remove selected item?</string>
    <string name="traffic_title">Traffic indicators</string>
    <string name="traffic_summary">Customize the traffic indicators</string>
    <string name="network_traffic_autohide_threshold_title">Auto-hide threshold</string>
    <string name="network_traffic_location_title">Location</string>
    <string name="network_traffic_disabled">Disabled</string>
    <string name="network_traffic_statusbar">Status bar</string>
    <string name="network_traffic_qs_header">QS header</string>
    <string name="network_traffic_refresh_interval_title">Refresh interval</string>
    <string name="network_traffic_mode_title">Display mode</string>
    <string name="network_traffic_dynamic">Dynamic</string>
    <string name="network_traffic_download">Download</string>
    <string name="network_traffic_upload">Upload</string>
    <string name="fprint_error_vib_title">Fingerprint error vibration</string>
    <string name="fprint_error_vib_summary">Vibrate on error fingerprint authentication</string>
    <string name="fprint_success_vib_title">Fingerprint authentication vibration</string>
    <string name="fprint_success_vib_summary">Vibrate on successful fingerprint authentication</string>
    <string name="show_fourg_icon_title">Show 4G instead of LTE</string>
    <string name="show_fourg_icon_summary">Replace LTE indicator with 4G</string>
    <string name="volte_icon_title">VoLTE icon</string>
    <string name="volte_icon_summary">Display VoLTE icon when available</string>
    <string name="vowifi_icon_title">VoWiFi icon</string>
    <string name="vowifi_icon_summary">Display VoWiFi icon when available</string>
    <string name="use_old_mobiletype_title">Use old style mobile data icons</string>
    <string name="use_old_mobiletype_summary">Show mobile type icon on top of the signal indicator</string>
    <string name="torch_long_press_power_gesture_title">Long press for torch</string>
    <string name="torch_long_press_power_gesture_desc">Activate the torch by long pressing the power button while the display is off</string>
    <string name="status_bar_clock_title">Clock &amp; date settings</string>
    <string name="icons_category">Icons</string>
    <string name="double_tap_to_sleep_title">Tap on status bar</string>
    <string name="double_tap_to_sleep_summary">Double-tap status bar to put the device to sleep</string>
    <string name="combined_status_bar_signal_icons">Combined signal icons</string>
    <string name="combined_status_bar_signal_icons_summary">Enable combined signal icons in status bar</string>
</resources>