<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2019-2022 The Project Lighthouse

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/status_bar_title">

<!--    <Preference
        android:key="systemui_tuner_statusbar"
        android:title="@string/statusbar_items_category"/>
        <intent android:action="android.intent.action.MAIN"
            android:targetPackage="com.android.systemui"
            android:targetClass="com.android.systemui.tuner.StatusbarItemsActivity" /> -->

    <PreferenceCategory
        android:key="general_sbar_category"
        android:title="@string/general_title">

    <com.lighthouse.settings.preference.SystemSettingSwitchPreference
        android:key="double_tap_sleep_gesture"
        android:title="@string/double_tap_to_sleep_title"
        android:summary="@string/double_tap_to_sleep_summary"
        android:defaultValue="true" />

    <Preference
        android:key="status_bar_clock"
        android:fragment="com.lighthouse.settings.fragments.ClockDateSettings"
        android:title="@string/status_bar_clock_title" /> 

    <Preference
        android:key="traffic"
        android:fragment="com.lighthouse.settings.fragments.Traffic"
        android:title="@string/traffic_title"
        android:summary="@string/traffic_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="telephony_icons_category"
        android:title="@string/telephony_icons_title">

        <com.lighthouse.settings.preference.SystemSettingSwitchPreference
            android:key="show_fourg_icon"
            android:title="@string/show_fourg_icon_title"
            android:summary="@string/show_fourg_icon_summary"
            android:defaultValue="false"/>

        <com.lighthouse.settings.preference.SystemSettingSwitchPreference
             android:key="volte_icon"
             android:title="@string/volte_icon_title"
             android:summary="@string/volte_icon_summary"
             android:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="misc_icons_category"
        android:title="@string/icons_category">

       <com.lighthouse.settings.preference.SecureSettingSwitchPreference
            android:key="show_combined_status_bar_signal_icons"
            android:title="@string/combined_status_bar_signal_icons"
            android:summary="@string/combined_status_bar_signal_icons_summary"
            android:defaultValue="false" />

        <!-- <com.lighthouse.settings.preference.SecureSettingSwitchPreference
            android:key="enable_camera_privacy_indicator"
            android:title="@string/mic_camera_privacy_indicator_title"
            android:summary="@string/mic_camera_privacy_indicator_summary"
            android:defaultValue="true" />

        <com.lighthouse.settings.preference.SecureSettingSwitchPreference
            android:key="enable_location_privacy_indicator"
            android:title="@string/location_privacy_indicator_title"
            android:summary="@string/location_privacy_indicator_summary"
            android:defaultValue="false" /> -->

    </PreferenceCategory>

</PreferenceScreen>
